check_PROGRAMS = node_sim_peer node_sim_nut node_sim_relay

node_sim_peer_SOURCES = ../test_case_optimal_pmtu_01/node_sim_peer.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c ../../utils.c
node_sim_peer_LDADD = ../../../src/libmeshlink.la
node_sim_peer_CFLAGS = -D_GNU_SOURCE

node_sim_nut_SOURCES = ../test_case_optimal_pmtu_01/node_sim_nut.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c ../../utils.c
node_sim_nut_LDADD = ../../../src/libmeshlink.la
node_sim_nut_CFLAGS = -D_GNU_SOURCE

node_sim_relay_SOURCES = ../test_case_optimal_pmtu_01/node_sim_relay.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c ../../utils.c
node_sim_relay_LDADD = ../../../src/libmeshlink.la
node_sim_relay_CFLAGS = -D_GNU_SOURCE
