check_PROGRAMS = node_sim_corenode1 node_sim_app1node1 node_sim_app1node2

node_sim_corenode1_SOURCES = node_sim_corenode1.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c ../../utils.c
node_sim_corenode1_LDADD = ../../../src/libmeshlink.la
node_sim_corenode1_CFLAGS = -D_GNU_SOURCE

node_sim_app1node1_SOURCES = node_sim_app1node1.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c ../../utils.c
node_sim_app1node1_LDADD = ../../../src/libmeshlink.la
node_sim_app1node1_CFLAGS = -D_GNU_SOURCE

node_sim_app1node2_SOURCES = node_sim_app1node2.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c ../../utils.c
node_sim_app1node2_LDADD = ../../../src/libmeshlink.la
node_sim_app1node2_CFLAGS = -D_GNU_SOURCE
